feat: 不使用Slimefun默认构造函数参数格式